--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,68 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+    :root{
+        --backgrounds: #606060;
+        --titles: #AD8330
+    }
+    h1,h2,h3,h4,h5,h6{
+      font-family: "Poppins", sans-serif;
+    }
+    html {
+        font-family: "Poppins", sans-serif;
+    }
   }
+.hero-bg{
+  background-image: url("../../public/faithbaptist/hero2.jpg");
+  
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  @layer components {
+    * {
+      @apply motion-reduce:transition-none;
+    }
+  
+    html {
+      @apply scroll-smooth;
+    }
+  
+    ::-webkit-scrollbar {
+      @apply w-[10px];
+    }
+  
+    /* Track */
+    ::-webkit-scrollbar-track {
+      @apply bg-rose-100;
+    }
+  
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+      @apply bg-neutral-700;
+      border-radius: 16px;
+    }
+  
+    .scroll-box span{
+      animation: scroll-down 3s infinite;
+    }
+    
+    /* Animate scroll icon */
+    @keyframes scroll-down{
+      0%{
+        transform: translateY(-1rem);
+        opacity: 0;
+      }
+      50%{
+        transform: translateY(0);
+        opacity: 1;
+      }
+      100%{
+        transform: translateY(.6rem);
+        opacity: 0;
+      }
+    }
+ 
   }
-}
